--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pharmacy Website Replication MVC</title>
+    <title>Farmacias El Sol LTDA.</title>
+    <meta name="description" content="Farmacia en Lontué y Sagrada Familia — atención cercana y profesional. Compra de medicamentos y productos de cuidado personal en Maule." />
+    <meta name="keywords" content="Farmacia en Lontué, Farmacias cerca de mí, Compra de medicamentos en Lontué — Maule, Farmacias El Sol LTDA" />
+    <meta name="author" content="Farmacias El Sol LTDA." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Farmacias El Sol LTDA." />
+    <meta property="og:description" content="Tu farmacia de confianza en Lontué — atención cercana y profesional." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://farmaciaselsol.example" />
+    <meta property="og:image" content="/vite.svg" />
   </head>
   <body>
     <div id="root"></div>
